--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
-.tophalf {
-    text-align: center;
-    position: relative;
-}
-#pic {
-    width: 100%;
-    height: 30vw;
-    object-fit: cover;
-}
-#header {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#Yubeats {
     color: rgb(156, 156, 126);
-    font-size: 10vw;
+    font-size: 5vw;
     font-family: URW Chancery L, cursive;
+    text-align: center;
 }
 body {
-    background: linear-gradient(23deg, rgba(255,255,255,1) 28%, rgba(225,242,214,1) 66%, rgba(156,156,126,1) 100%);
+    background-image: url("images/IMG_20230708_201243.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; 
+    background-attachment: fixed;
+}
+nav {
+    width: 100%;
+    height: 5vw;
+    background: rgba(0,0,0,0.3);
+    display:flex;
+    align-items: center;
+}
+nav li {
+    display: inline-block;
+    list-style: none;
+    padding: 0vw 12.5vw;
+
 }
