--- a/style.css
+++ b/style.css
@@ -10,16 +10,27 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-nav {
+nav ul {
     width: 100%;
     height: 5vw;
-    background: rgba(0,0,0,0.3);
+    background: rgba(255, 255, 255, 0.466);
     display:flex;
     align-items: center;
+    justify-content: space-evenly;
+    padding: 0%;
+    margin: 0%;
+    list-style-type: none;
+    overflow: hidden;
 }
-nav li {
-    display: inline-block;
+nav a {
+    display: block;
     list-style: none;
-    padding: 0vw 12.5vw;
-
+    color: black;
+    text-decoration: none;
+    padding: 15vw;
+    font-size: 2vw;
+    font-family: URW Chancery L, cursive;
+}
+nav a:hover{
+    background-color: rgba(255, 255, 255, 0.781);
 }
