--- a/style.css
+++ b/style.css
@@ -35,3 +35,7 @@ nav a {
 nav a:hover{
     background-color: rgba(255, 255, 255, 0.781);
 }
+p {
+    background-color: rgba(255, 255, 255, 0.466);
+    height: 50vw;
+}
