--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #Yubeats {
     color: rgb(156, 156, 126);
     font-size: 5vw;
-    font-family: URW Chancery L, cursive;
+    font-family: Comic Sans MS, Comic Sans, cursive;
     text-align: center;
 }
 body {
@@ -30,7 +30,7 @@ nav a {
     text-decoration: none;
     padding: 12vw;
     font-size: 3vw;
-    font-family: URW Chancery L, cursive;
+    font-family: Comic Sans MS, Comic Sans, cursive;
 }
 nav a:hover{
     background-color: rgba(255, 255, 255, 0.781);
@@ -38,4 +38,5 @@ nav a:hover{
 p {
     background-color: rgba(255, 255, 255, 0.466);
     height: 50vw;
+    margin-top: 2vw;
 }
