--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@font-face {
+    font-family: myFont;
+    src: url(fonts/comicbd.ttf);
+}
 #Yubeats {
     color: rgb(156, 156, 126);
     font-size: 5vw;
-    font-family: Comic Sans MS, Comic Sans;
+    font-family: myFont;
     text-align: center;
 }
 body {
@@ -30,7 +34,7 @@ nav a {
     text-decoration: none;
     padding: 12vw;
     font-size: 3vw;
-    font-family: Comic Sans MS, Comic Sans;
+    font-family: myFont;
 }
 nav a:hover{
     background-color: rgba(255, 255, 255, 0.781);
