--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-image: url("images/IMG_20230708_201243.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
     margin: 3vw;
 }
 nav ul {
