--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    margin: 3vw;
+    margin: 5vw;
 }
 nav ul {
     width: 100%;
-    height: 5vw;
+    height: 6vw;
     background: rgba(255, 255, 255, 0.466);
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-evenly;
     padding: 0%;
@@ -39,8 +39,21 @@ nav a {
 nav a:hover{
     background-color: rgba(255, 255, 255, 0.781);
 }
-p {
+.texts {
     background-color: rgba(255, 255, 255, 0.466);
-    height: 50vw;
+    height: 80%;
     margin-top: 2vw;
+    font-family: myFont;
+    font-size: 3vw;
+    text-align: center;
+}
+.fa-brands {
+    margin-inline: 5vw;
+    margin-block: 5vw;
+}
+img {
+    width: 80%;
+    height: 50vw;
+    margin-top: 5vw;
+    object-fit: contain;
 }
