--- a/style.css
+++ b/style.css
@@ -57,6 +57,6 @@ img {
     margin-top: 5vw;
     object-fit: contain;
 }
-.active {
+#active {
     background-color: rgba(255, 255, 255, 0.781);
 }
