--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-family: myFont;
     src: url(fonts/comicbd.ttf);
 }
-#Yubeats {
+#ForestiaAcoustic {
     color: rgb(156, 156, 126);
     font-size: 5vw;
     font-family: myFont;
